Set up virus-metadata analysis workflow

--- a/.example.env
+++ b/.example.env
@@ -8,3 +8,6 @@ PG_DATABASE_SERRATUS=""
 PG_HOST_SERRATUS=""
 PG_USER_SERRATUS=""
 PG_PASSWORD_SERRATUS=""
+
+AZURE_OPENAI_API_KEY=""
+AZURE_OPENAI_ENDPOINT=""
