--- a/.pylintrc
+++ b/.pylintrc
@@ -445,7 +445,9 @@ disable=raw-checker-failed,
         missing-module-docstring,
         missing-function-docstring,
         missing-class-docstring,
-        broad-exception-caught
+        broad-exception-caught,
+        too-many-positional-arguments,
+        too-many-arguments
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
