--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "bio>=1.8.0",
     "black>=25.1.0",
     "dotenv>=0.9.9",
+    "langchain-openai>=0.3.28",
+    "langgraph>=0.6.2",
     "mcp[cli]",
     "neo4j>=5.28.1",
     "psycopg2>=2.9.10",
